@@ -3,6 +3,7 @@ package br.com.grupo03.projetopoo.model.entity;
 import jakarta.persistence.*;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -16,7 +17,7 @@ public class Venda {
     @Column(nullable = false)
     private LocalDateTime data;
 
-    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
+    @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
     @JoinColumn(name = "venda_id", nullable = false)
     private List<ItemNota> itens = new ArrayList<>();
 
@@ -33,6 +34,8 @@ public class Venda {
         this.id = id;
     }
 
+    // --- Getters ---
+
     public Long getId() {
         return id;
     }
@@ -42,16 +45,40 @@ public class Venda {
     }
 
     public List<ItemNota> getItens() {
-        return List.copyOf(itens);
+        return Collections.unmodifiableList(itens);
     }
 
     public double getValorTotal() {
         return valorTotal;
     }
 
+
+    public void setValorTotal(double valorTotal) {
+        this.valorTotal = valorTotal;
+    }
+
+
     public void adicionarItem(ItemNota item) {
-        if (item == null) throw new IllegalArgumentException("Item não pode ser nulo");
+        if (item == null) {
+            throw new IllegalArgumentException("Item não pode ser nulo");
+        }
         this.itens.add(item);
-        this.valorTotal += item.getValorTotal();
+        recalcularValorTotal();
+    }
+
+
+    public void removerItem(ItemNota item) {
+        if (item == null) {
+            throw new IllegalArgumentException("Item não pode ser nulo");
+        }
+        this.itens.remove(item);
+        recalcularValorTotal();
+    }
+
+
+    private void recalcularValorTotal() {
+        this.valorTotal = this.itens.stream()
+                .mapToDouble(ItemNota::getValorTotal)
+                .sum();
     }
 }
